fix: typos capture uses installed binary, exclude conda.io from link check
- Spell check capture step uses 'typos' binary (installed by crate-ci
  action) instead of nonexistent npm package 'typos-cli'
- Add docs.conda.io to lychee exclude list (aggressive rate limiting
  causes false 429 failures in CI)

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -92,8 +92,8 @@ jobs:
         run: |
           if [ "$SPELLCHECK_OUTCOME" = "failure" ]; then
             echo "failed" > /tmp/pr-checks/spellcheck-status
-            # Re-run to capture output (the action doesn't expose it)
-            npx -y typos-cli --config ./_typos.toml docs/ 2>&1 | head -100 > /tmp/pr-checks/spellcheck-output || true
+            # Re-run typos to capture output (the action binary is on PATH after the step above)
+            typos --config ./_typos.toml docs/ 2>&1 | head -100 > /tmp/pr-checks/spellcheck-output || true
           else
             echo "passed" > /tmp/pr-checks/spellcheck-status
           fi
