--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -415,14 +415,9 @@ jobs:
 
           Some links in the documentation point to pages that don't exist or can't be reached.
 
-          <details>
-          <summary>View broken links</summary>
-
           EOF
             cat /tmp/pr-checks/linkcheck-output.md >> "$REPORT" 2>/dev/null || echo "(output not captured)" >> "$REPORT"
             cat >> "$REPORT" << 'EOF'
-
-          </details>
 
           **How to fix:** For each broken link above:
 
@@ -554,12 +549,42 @@ jobs:
 
           | Issue | What it means | How to fix |
           |-------|--------------|------------|
-          | **Curly/smart quotes in tab title** | The `===` line uses `"..."` instead of `"..."` | Replace with straight ASCII double quotes |
+          | **Curly/smart quotes in tab title** | The `===` line uses `\u201c...\u201d` instead of `"..."` | Replace with straight ASCII double quotes |
           | **Missing blank line after tab header** | Content starts right after `=== "Title"` | Add an empty line between the `===` line and the content |
           | **Tab/admonition content not indented** | Content is not indented 4 spaces inside the block | Indent all content by 4 spaces relative to the `===` or `!!!` marker |
           | **Code block content at column 0** | Code inside an indented fence starts at the left margin | Indent the code to match the fence indentation |
 
-          > **Tip:** Most of these are auto-fixed by CI. If they persist, the fix requires manual attention.
+          > **Tip:** Curly quotes and missing blank lines are auto-fixed by CI. If issues persist after the auto-fix commit, they require manual attention.
+
+          <details>
+          <summary>Examples of correct syntax</summary>
+
+          **Content tabs** — always leave a blank line after `===` and indent content by 4 spaces:
+          ~~~markdown
+          === "Tab Title"
+
+              Content goes here, indented 4 spaces.
+
+              ```bash
+              code also indented 4 spaces
+              ```
+          ~~~
+
+          **Admonitions** — indent content by 4 spaces (no blank line needed):
+          ~~~markdown
+          !!! note "Title"
+              Content indented 4 spaces.
+          ~~~
+
+          **Admonition inside a tab** — content needs 4 + 4 = 8 spaces:
+          ~~~markdown
+          === "Setup"
+
+              !!! warning
+                  This text is indented 8 spaces (4 for the tab + 4 for the admonition).
+          ~~~
+
+          </details>
           EOF
           fi
 
